# pillow-talk

./: .gitignore  Pillow_Talk_需求文档_最终版.md  README.md  build-apk.bat  build-apk.ps1  build-apk.sh  build-ios.sh  start.sh  安装环境.md
pillow-talk-backend/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  TTS_MVP_README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  start.sh  test_imports.py  tts_config.example.yaml
pillow-talk-backend/src/adapters/: glm.py  qwen.py
pillow-talk-backend/src/core/: prompt.py
pillow-talk-backend/src/models/: request.py
pillow-talk-backend/src/pillow_talk/: config.py
pillow-talk-backend/src/pillow_talk/adapters/: __init__.py  claude.py  custom.py  doubao.py  gemini.py  glm.py  qwen.py
pillow-talk-backend/src/pillow_talk/api/: __init__.py  dependencies.py  routes.py
pillow-talk-backend/src/pillow_talk/core/: conversation.py  image.py  prompt.py
pillow-talk-backend/src/pillow_talk/services/: __init__.py  rate_limit.py
pillow-talk-backend/src/pillow_talk/tts/: cleanup.py  system.py
pillow-talk-backend/src/pillow_talk/tts/adapters/: __init__.py
pillow-talk-backend/src/pillow_talk/utils/: exceptions.py  logger.py
pillow-talk-backend/src/tts/: manager.py
pillow-talk-backend/src/tts/adapters/: base.py  google_adapter.py  openai_adapter.py
pillow-talk-backend/tests/: conftest.py
pillow-talk-backend/tests/fixtures/: __init__.py
pillow-talk-backend/tests/integration/: __init__.py
pillow-talk-backend/tests/property/: __init__.py
pillow-talk-backend/tests/unit/: __init__.py
pillow-talk-desktop/: README.md  build-mac.sh  install.sh  main.js  package-lock.json  package.json  preload.js  test-app.sh
pillow-talk-desktop/renderer/: app.js  index.html
pillow-talk-mobile/: capacitor.config.json  package-lock.json  package.json  start.sh
pillow-talk-mobile/android/: build.gradle
pillow-talk-mobile/www/: index.html
pillow-talk-web/: index.html  package-lock.json  package.json  start.sh
(+39 files in other folders)
